Project Index Design

--- a/VacationManager/VacationManager/Views/Projects/Index.cshtml
+++ b/VacationManager/VacationManager/Views/Projects/Index.cshtml
@@ -4,26 +4,32 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Projects</h1>
+<head>
+    <link rel="stylesheet" href="~/css/ProjectIndex.css"/>
+</head>
+
+<h1 align="center">PROJECTS</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-primary"><i class="fa fa-plus-circle"></i> Create New</a>
 </p>
 
 <form id="filterForm">
-    <div class="form-group">
-        <label for="projectNameFilter">Filter by Project Name:</label>
-        <input type="text" class="form-control" id="projectNameFilter">
+    <div class="form-group d-flex">
+        <div class="mr-3">
+            <label for="projectNameFilter">Filter by Project Name:</label>
+            <input type="text" class="form-control" id="projectNameFilter">
+        </div>
+        <div class="mr-3">
+            <label for="projectDescriptionFilter">Filter by Project Description:</label>
+            <input type="text" class="form-control" id="projectDescriptionFilter">
+        </div>
+        <button type="button" class="btn btn-primary mr-2 align-self-end" onclick="applyFilter()"><i class="fa fa-filter icon"></i> Apply Filter</button>
+        <button type="button" class="btn btn-secondary align-self-end" onclick="clearFilter()"><i class="fa fa-times icon"></i> Clear Filter</button>
     </div>
-    <div class="form-group">
-        <label for="projectDescriptionFilter">Filter by Project Description:</label>
-        <input type="text" class="form-control" id="projectDescriptionFilter">
-    </div>
-    <button type="button" class="btn btn-primary" onclick="applyFilter()">Apply Filter</button>
-    <button type="button" class="btn btn-secondary" onclick="clearFilter()">Clear Filter</button>
 </form>
 
-<label for="pageSizeSelector">Page size:</label>
+<label for="pageSizeSelector">Number of rows:</label>
 <select id="pageSizeSelector">
     <option value="10">10</option>
     <option value="25">25</option>
@@ -53,17 +59,17 @@
                     @Html.DisplayFor(modelItem => item.Description)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.Id"><i class="fa fa-edit fa-lg"></i></a>  |
+                    <a asp-action="Details" asp-route-id="@item.Id"><i class="fa fa-info-circle fa-lg"></i></a>  |
+                    <a asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-trash fa-lg" aria-hidden="true"></i></a>
                 </td>
             </tr>
         }
     </tbody>
 </table>
 
-<button id="prevButton">Previous</button>
-<button id="nextButton">Next</button>
+<button id="prevButton" class="btn btn-secondary"><i class="fa fa-chevron-left icon"></i> Previous</button>
+<button id="nextButton" class="btn btn-secondary"><i class="fa fa-chevron-right icon"></i> Next</button>
 
 @section Scripts {
     <script>
