--- a/VacationManager/VacationManager/Views/Teams/Index.cshtml
+++ b/VacationManager/VacationManager/Views/Teams/Index.cshtml
@@ -89,9 +89,14 @@
                     }
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id"><i class="fa fa-edit fa-lg"></i></a>  |
+                    @{
+                        bool isEditable = !new[] { "Not in a team" }.Contains(item.Name);
+                        string editAction = isEditable ? "Edit" : "#";
+                        string deleteAction = isEditable ? "Delete" : "#";
+                    }
+                    <a asp-action="@editAction" asp-route-id="@item.Id" onclick="return confirmDeleteOrEdit('@item.Name')"><i class="fa fa-edit fa-lg"></i></a>  |
                     <a asp-action="Details" asp-route-id="@item.Id"><i class="fa fa-info-circle fa-lg"></i></a>  |
-                    <a asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-trash fa-lg" aria-hidden="true"></i></a>
+                    <a asp-action="@deleteAction" asp-route-id="@item.Id" onclick="return confirmDeleteOrEdit('@item.Name')"><i class="fa fa-trash fa-lg" aria-hidden="true"></i></a>
                 </td>
             </tr>
         }
@@ -103,6 +108,14 @@
 
 @section Scripts {
     <script>
+        function confirmDeleteOrEdit(teamName) {
+            if (teamName === "Not in a team") {
+                alert("This team cannot be deleted or edited.");
+                return false;
+            }
+            return true;
+        }
+
         // Define an array to store the indexes of visible rows
         var visibleRowIndexes = [];
         var flag = false;
