--- a/VacationManager/VacationManager/Views/Teams/Create.cshtml
+++ b/VacationManager/VacationManager/Views/Teams/Create.cshtml
@@ -1,7 +1,16 @@
-﻿@model VacationManager.Models.TeamModel
+﻿@inject VacationManager.Data.ApplicationDbContext _context
+@model VacationManager.Models.TeamModel
 
 @{
     ViewData["Title"] = "Create";
+    var username = User.Identity.Name;
+    var user = _context.Users.SingleOrDefault(u => u.Username == username);
+    if (user.RoleId != 1)
+    {
+        <script>
+            window.location.href = "/Home/Index";
+        </script>
+    }
 }
 
 <h1>Create team</h1>
