--- a/VacationManager/VacationManager/Views/Roles/Edit.cshtml
+++ b/VacationManager/VacationManager/Views/Roles/Edit.cshtml
@@ -1,7 +1,16 @@
-﻿@model VacationManager.Models.RoleModel
+﻿@inject VacationManager.Data.ApplicationDbContext _context
+@model VacationManager.Models.RoleModel
 
 @{
     ViewData["Title"] = "Edit";
+    var username = User.Identity.Name;
+    var user = _context.Users.SingleOrDefault(u => u.Username == username);
+    if (user.RoleId != 1)
+    {
+        <script>
+            window.location.href = "/Home/Index";
+        </script>
+    }
 }
 
 <h1>Role Edit</h1>
