--- a/VacationManager/VacationManager/Views/VacationDays/Details.cshtml
+++ b/VacationManager/VacationManager/Views/VacationDays/Details.cshtml
@@ -1,7 +1,15 @@
-﻿@model VacationManager.Models.VacationDaysModel
+﻿@inject VacationManager.Data.ApplicationDbContext _context
+@model VacationManager.Models.VacationDaysModel
 
 @{
     ViewData["Title"] = "Details";
+    var username = User.Identity.Name;
+    var loggedPerson = _context.Users.SingleOrDefault(u => u.Username == username);
+    
+        <script>
+            window.location.href = "/Home/Index";
+        </script>
+    
 }
 
 <h1>Details</h1>
