--- a/VacationManager/VacationManager/Views/VacationDays/Edit.cshtml
+++ b/VacationManager/VacationManager/Views/VacationDays/Edit.cshtml
@@ -36,7 +36,7 @@
                 <input asp-for="VacationDays" class="form-control" />
                 <span asp-validation-for="VacationDays" class="text-danger"></span>
             </div>
-            <div class="form-group" style="display: none;">
+            <div class="form-group">
                 <label asp-for="UsedDays" class="control-label"></label>
                 <input asp-for="UsedDays" class="form-control" />
                 <span asp-validation-for="UsedDays" class="text-danger"></span>
