--- a/VacationManager/VacationManager/Views/LeaveRequests/Edit.cshtml
+++ b/VacationManager/VacationManager/Views/LeaveRequests/Edit.cshtml
@@ -4,15 +4,19 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit Leave Request</h1>
+<head>
+    <link rel="stylesheet" href="~/css/TeamEdit.css" />
+</head>
 
-@if (Model.IsHalfDay)
-{
-    <div class="alert alert-info" role="alert">You are editing a request for half-day leave</div>
-}
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="container">
+    <div class="form-container">
+        <h1 align="center">EDIT</h1>
+        <h1 align="center">LEAVE REQUEST</h1>
+        @if (Model.IsHalfDay)
+        {
+            <div class="alert alert-info" role="alert">You are editing a request for half-day leave</div>
+        }
+        <hr />
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
@@ -73,16 +77,16 @@
                 </select>
                 <span asp-validation-for="ApproverId" class="text-danger"></span>
             </div>
-
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="form-footer">
+                <div>
+                    <input type="submit" value="Save" class="btn btn-primary" />
+                </div>
+                <div>
+                    <a asp-action="Index"><i class="fa fa-chevron-circle-left" aria-hidden="true"></i> Back to List</a>
+                </div>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
