--- a/VacationManager/VacationManager/Views/Teams/Edit.cshtml
+++ b/VacationManager/VacationManager/Views/Teams/Edit.cshtml
@@ -47,7 +47,7 @@
                 <span asp-validation-for="TeamLeaderId" class="text-danger"></span>
             </div>
             <div class="form-footer">
-                <div class="form-group">
+                <div>
                     <input type="submit" value="Save" class="btn btn-primary" />
                 </div>
                 <div>
