--- a/VacationManager/VacationManager/Views/VacationDays/Edit.cshtml
+++ b/VacationManager/VacationManager/Views/VacationDays/Edit.cshtml
@@ -13,11 +13,15 @@
     }
 }
 
-<h1>Edit User's Vacation Days</h1>
+<head>
+    <link rel="stylesheet" href="~/css/TeamEdit.css" />
+</head>
 
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="container">
+    <div class="form-container">
+        <h1 align ="center">EDIT</h1>
+        <h1 align ="center">VACATION DAYS</h1>
+        <hr />
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
@@ -46,15 +50,16 @@
                 <input asp-for="PendingDays" class="form-control" />
                 <span asp-validation-for="PendingDays" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="form-footer">
+                <div>
+                    <input type="submit" value="Save" class="btn btn-primary" />
+                </div>
+                <div>
+                    <a asp-action="Index"><i class="fa fa-chevron-circle-left" aria-hidden="true"></i> Back to List</a>
+                </div>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
