--- a/VacationManager/VacationManager/wwwroot/css/TeamEdit.css
+++ b/VacationManager/VacationManager/wwwroot/css/TeamEdit.css
@@ -28,6 +28,7 @@ h1 {
     border: 1px solid #ced4da;
     border-radius: 0.25rem;
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    cursor: pointer;
 }
 
     .form-control:focus {
