--- a/VacationManager/VacationManager/Views/LeaveRequests/Delete.cshtml
+++ b/VacationManager/VacationManager/Views/LeaveRequests/Delete.cshtml
@@ -4,85 +4,93 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<head>
+    <link rel="stylesheet" href="~/css/DeletionConfirm.css" />
+</head>
 
-<h3>Are you sure you want to delete this leave request?</h3>
-<div>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @* @Html.DisplayNameFor(model => model.RequestCreationDate) *@
-            Request Creation Date
-        </dt>
-        <dd class = "col-sm-10">
-            @Model.RequestCreationDate.ToString("dd-MM-yyyy")
-        </dd>
-        @* <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ApplicantId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ApplicantId)
-        </dd> *@
-        <dt class = "col-sm-2">
-            Start Date
-        </dt>
-        <dd class = "col-sm-10">
-            @Model.StartDate.ToString("dd-MM-yyyy")
-        </dd>
-        <dt class = "col-sm-2">
-            End Date
-        </dt>
-        <dd class = "col-sm-10">
-            @* @Html.DisplayFor(model => model.EndDate) *@
-            @Model.EndDate.ToString("dd-MM-yyyy")
-        </dd>
-       @*  <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsSickLeave)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsSickLeave)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.MedicalCertificate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.MedicalCertificate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsPaid)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsPaid)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsHalfDay)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsHalfDay)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsApproved)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsApproved)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ApproverId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ApproverId)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsCompleted)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsCompleted)
-        </dd> *@
-    </dl>
+<div class="container">
+    <div class="form-container">
+        <h1 align="center"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> DELETE <i class="fa fa-exclamation-triangle" aria-hidden="true"></i></h1>
+        <h3 align="center">Are you sure you want to delete this leave request?</h3>
+        <div>
+            <hr />
+            <dl class="row">
+                <dt class = "col-sm-2">
+                    @* @Html.DisplayNameFor(model => model.RequestCreationDate) *@
+                    Request Creation Date
+                </dt>
+                <dd class = "col-sm-10">
+                    @Model.RequestCreationDate.ToString("dd-MM-yyyy")
+                </dd>
+                @* <dt class = "col-sm-2">
+                    @Html.DisplayNameFor(model => model.ApplicantId)
+                </dt>
+                <dd class = "col-sm-10">
+                    @Html.DisplayFor(model => model.ApplicantId)
+                </dd> *@
+                <dt class = "col-sm-2">
+                    Start Date
+                </dt>
+                <dd class = "col-sm-10">
+                    @Model.StartDate.ToString("dd-MM-yyyy")
+                </dd>
+                <dt class = "col-sm-2">
+                    End Date
+                </dt>
+                <dd class = "col-sm-10">
+                    @* @Html.DisplayFor(model => model.EndDate) *@
+                    @Model.EndDate.ToString("dd-MM-yyyy")
+                </dd>
+               @*  <dt class = "col-sm-2">
+                    @Html.DisplayNameFor(model => model.IsSickLeave)
+                </dt>
+                <dd class = "col-sm-10">
+                    @Html.DisplayFor(model => model.IsSickLeave)
+                </dd>
+                <dt class = "col-sm-2">
+                    @Html.DisplayNameFor(model => model.MedicalCertificate)
+                </dt>
+                <dd class = "col-sm-10">
+                    @Html.DisplayFor(model => model.MedicalCertificate)
+                </dd>
+                <dt class = "col-sm-2">
+                    @Html.DisplayNameFor(model => model.IsPaid)
+                </dt>
+                <dd class = "col-sm-10">
+                    @Html.DisplayFor(model => model.IsPaid)
+                </dd>
+                <dt class = "col-sm-2">
+                    @Html.DisplayNameFor(model => model.IsHalfDay)
+                </dt>
+                <dd class = "col-sm-10">
+                    @Html.DisplayFor(model => model.IsHalfDay)
+                </dd>
+                <dt class = "col-sm-2">
+                    @Html.DisplayNameFor(model => model.IsApproved)
+                </dt>
+                <dd class = "col-sm-10">
+                    @Html.DisplayFor(model => model.IsApproved)
+                </dd>
+                <dt class = "col-sm-2">
+                    @Html.DisplayNameFor(model => model.ApproverId)
+                </dt>
+                <dd class = "col-sm-10">
+                    @Html.DisplayFor(model => model.ApproverId)
+                </dd>
+                <dt class = "col-sm-2">
+                    @Html.DisplayNameFor(model => model.IsCompleted)
+                </dt>
+                <dd class = "col-sm-10">
+                    @Html.DisplayFor(model => model.IsCompleted)
+                </dd> *@
+            </dl>
     
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+            <form asp-action="Delete">
+                <input type="hidden" asp-for="Id" />
+                <input type="submit" value="Delete" class="btn btn-danger" /> |
+                <a asp-action="Index"><i class="fa fa-chevron-circle-left" aria-hidden="true"></i> Back to List</a>
+            </form>
+        </div>
+    </div>
 </div>
+
