--- a/VacationManager/VacationManager/Views/Projects/Delete.cshtml
+++ b/VacationManager/VacationManager/Views/Projects/Delete.cshtml
@@ -13,29 +13,36 @@
     }
 }
 
-<h1>Delete</h1>
+<head>
+    <link rel="stylesheet" href="~/css/DeletionConfirm.css" />
+</head>
 
-<h3>Are you sure you want to delete this project?</h3>
-<div>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-    </dl>
+<div class="container">
+    <div class="form-container">
+        <h1 align="center"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> DELETE <i class="fa fa-exclamation-triangle" aria-hidden="true"></i></h1>
+        <h3 align="center">Are you sure you want to delete this project?</h3>
+        <div>
+            <hr />
+            <dl class="row">
+                <dt class = "col-sm-2">
+                    @Html.DisplayNameFor(model => model.Name)
+                </dt>
+                <dd class = "col-sm-10">
+                    @Html.DisplayFor(model => model.Name)
+                </dd>
+                <dt class = "col-sm-2">
+                    @Html.DisplayNameFor(model => model.Description)
+                </dt>
+                <dd class = "col-sm-10">
+                    @Html.DisplayFor(model => model.Description)
+                </dd>
+            </dl>
     
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+            <form asp-action="Delete">
+                <input type="hidden" asp-for="Id" />
+                <input type="submit" value="Delete" class="btn btn-danger" /> |
+                <a asp-action="Index"><i class="fa fa-chevron-circle-left" aria-hidden="true"></i> Back to List</a>
+            </form>
+        </div>
+    </div>
 </div>
