--- a/VacationManager/VacationManager/Views/Teams/Delete.cshtml
+++ b/VacationManager/VacationManager/Views/Teams/Delete.cshtml
@@ -13,48 +13,54 @@
     }
 }
 
-<h1>Delete</h1>
+<head>
+    <link rel="stylesheet" href="~/css/DeletionConfirm.css"/>
+</head>
 
-<h3>Are you sure you want to delete this team?</h3>
-<div>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        <dt class="col-sm-2">
-            Project
-        </dt>
-        <dd class="col-sm-10">
-                @if (!string.IsNullOrEmpty(ViewData["ProjectName"] as string))
-                {
-                    @ViewData["ProjectName"]
-                }
-                else
-                {
-                <span>No Project</span>
-                }
-        </dd>
-        <dt class="col-sm-2">
-            Team Leader
-        </dt>
-        <dd class="col-sm-10">
-                @if (!string.IsNullOrEmpty(ViewData["TeamLeaderName"] as string))
-                {
-                    @ViewData["TeamLeaderName"]
-                }
-                else
-                {
-                <span>No Team Leader</span>
-                }
-        </dd>
-    </dl>
-
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+<div class="container">
+    <div class="form-container">
+        <h1 align ="center"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> DELETE <i class="fa fa-exclamation-triangle" aria-hidden="true"></i></h1>
+        <h3 align ="center">Are you sure you want to delete this team?</h3>
+        <div>
+            <hr />
+            <dl class="row">
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Name)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Name)
+                <dt class="col-sm-2">
+                    Project
+                </dt>
+                <dd class="col-sm-10">
+                        @if (!string.IsNullOrEmpty(ViewData["ProjectName"] as string))
+                        {
+                            @ViewData["ProjectName"]
+                        }
+                        else
+                        {
+                        <span>No Project</span>
+                        }
+                </dd>
+                <dt class="col-sm-2">
+                    Team Leader
+                </dt>
+                <dd class="col-sm-10">
+                        @if (!string.IsNullOrEmpty(ViewData["TeamLeaderName"] as string))
+                        {
+                            @ViewData["TeamLeaderName"]
+                        }
+                        else
+                        {
+                        <span>No Team Leader</span>
+                        }
+                </dd>
+            </dl>
+            <form asp-action="Delete">
+                <input type="hidden" asp-for="Id" />
+                <input type="submit" value="Delete" class="btn btn-danger" /> |
+                <a asp-action="Index"><i class="fa fa-chevron-circle-left" aria-hidden="true"></i> Back to List</a>
+            </form>
+        </div>
+    </div>
 </div>
