--- a/VacationManager/VacationManager/Views/Users/Delete.cshtml
+++ b/VacationManager/VacationManager/Views/Users/Delete.cshtml
@@ -13,47 +13,55 @@
     }
 }
 
-<h1>Delete</h1>
+<head>
+    <link rel="stylesheet" href="~/css/DeletionConfirm.css" />
+</head>
 
-<h3>Are you sure you want to delete this user?</h3>
-<div>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Username)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Username)
-        </dd>
-        <dt class = "col-sm-2">
-            First Name
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FirstName)
-        </dd>
-        <dt class = "col-sm-2">
-            Last Name
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LastName)
-        </dd>
-        <dt class="col-sm-2">
-            Role
-        </dt>
-        <dd class="col-sm-10">
-            @ViewData["RoleName"]
-        </dd>
-        <dt class="col-sm-2">
-            Team
-        </dt>
-        <dd class="col-sm-10">
-            @ViewData["TeamName"]
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+
+<div class="container">
+    <div class="form-container">
+        <h1 align="center"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> DELETE <i class="fa fa-exclamation-triangle" aria-hidden="true"></i></h1>
+        <h3 align="center">Are you sure you want to delete this user?</h3>
+        <div>
+            <hr />
+            <dl class="row">
+                <dt class = "col-sm-2">
+                    @Html.DisplayNameFor(model => model.Username)
+                </dt>
+                <dd class = "col-sm-10">
+                    @Html.DisplayFor(model => model.Username)
+                </dd>
+                <dt class = "col-sm-2">
+                    First Name
+                </dt>
+                <dd class = "col-sm-10">
+                    @Html.DisplayFor(model => model.FirstName)
+                </dd>
+                <dt class = "col-sm-2">
+                    Last Name
+                </dt>
+                <dd class = "col-sm-10">
+                    @Html.DisplayFor(model => model.LastName)
+                </dd>
+                <dt class="col-sm-2">
+                    Role
+                </dt>
+                <dd class="col-sm-10">
+                    @ViewData["RoleName"]
+                </dd>
+                <dt class="col-sm-2">
+                    Team
+                </dt>
+                <dd class="col-sm-10">
+                    @ViewData["TeamName"]
+                </dd>
+            </dl>
+       
+            <form asp-action="Delete">
+                <input type="hidden" asp-for="Id" />
+                <input type="submit" value="Delete" class="btn btn-danger" /> |
+                <a asp-action="Index"><i class="fa fa-chevron-circle-left" aria-hidden="true"></i> Back to List</a>
+            </form>
+        </div>
+    </div>
 </div>
