--- a/VacationManager/VacationManager/Views/LeaveRequests/Details.cshtml
+++ b/VacationManager/VacationManager/Views/LeaveRequests/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Leave Request Details</h1>
+<h1 align="center" style="color: #104c91;"><i class="fa fa-info-circle"></i> Leave Request Details</h1>
 
 <div>
     <hr />
@@ -88,6 +88,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id"><i class="fa fa-edit"></i> Edit</a> |
+    <a asp-action="Index"><i class="fa fa-chevron-circle-left"></i> Back to List</a>
 </div>
