--- a/VacationManager/VacationManager/Views/Users/Details.cshtml
+++ b/VacationManager/VacationManager/Views/Users/Details.cshtml
@@ -13,7 +13,11 @@
     }
 }
 
-<h1>User Details</h1>
+<head>
+    <link rel="stylesheet" href="~/css/TeamDetails.css" />
+</head>
+
+<h1><i class="fa fa-info-circle"></i> User Details</h1>
 
 <div>
     <hr />
@@ -120,8 +124,8 @@
                         </label>
                     </div>
                     <div class="form-group">
-                        <label asp-for="TeamId" class="control-label">Teams:</label>
-                        <select asp-for="TeamId" class="form-control">
+                        <label asp-for="TeamId" class="control-label"><b>Teams:</b></label>
+                        <select asp-for="TeamId" class="form-control" style="width: 150px;">
                             @foreach (var option in teamOptions)
                             {
                                 <option value="@option.Value">@option.Text</option>
@@ -143,7 +147,7 @@
     }
 </div>
 
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+<div style="padding-top: 20px">
+    <a asp-action="Edit" asp-route-id="@Model?.Id"><i class="fa fa-edit"></i> Edit</a> |
+    <a asp-action="Index"><i class="fa fa-chevron-circle-left"></i> Back to List</a>
 </div>
