--- a/VacationManager/VacationManager/Views/Home/Index.cshtml
+++ b/VacationManager/VacationManager/Views/Home/Index.cshtml
@@ -2,7 +2,16 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<head>
+    <link rel="stylesheet" href="~/css/Home.css" />
+</head>
+
+<div class="quote-container">
+    <blockquote class="quote"><b>
+        "Too much rest is rust." Sir Walter Scott
+        </b></blockquote>
+</div>
+
+<div class="login-message">
+    <p>Please Log In To Access The System!</p>
 </div>
