--- a/VacationManager/VacationManager/Views/Shared/_LoginPartial.cshtml
+++ b/VacationManager/VacationManager/Views/Shared/_LoginPartial.cshtml
@@ -19,14 +19,14 @@
         <li class="nav-item">
             @if(user != null)
             {
-                <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @user.FirstName @user.LastName!</a>
+                <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage"><b>Hello @user.FirstName @user.LastName!</b></a>
             }
-            else {<a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>}
+            else {<a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage"><b>Hello @User.Identity?.Name!</b></a>}
             
         </li>
         <li class="nav-item">
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+                <button type="submit" class="nav-link btn btn-link text-dark"><b>Logout</b></button>
             </form>
         </li>
         @* @if (user != null && user.RoleId == 1)
@@ -39,14 +39,14 @@
         @if (username == "dummyCEO")
         {
             <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
+                <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register"><b>Register</b></a>
             </li>
         }
     }
     else
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
+            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login"><b>Login</b></a>
         </li>
     }
 </ul>
